scss/common/_modal.scss
.bootbox.modal,
.modal-inner-container {
  background-color: color-chooser($modal-bg-dark, $modal-bg-light);
  border-radius: $modal-border-radius;
  box-shadow: $modal-box-shadow;
  max-width: $modal-width;
  outline: 0;
  width: calc(100% - #{$spacer * 2});
}

.bootbox.modal {
  border: 0;
  margin-left: 0;
  transform: translateX(-50%);

  .modal-footer {
    a {
      &.btn-primary {
        color: unquote('$tertiary');
      }
    }
  }
}

.close {
  color: color-chooser($white-secondary, $black-secondary);
  font-size: $font-size-base;
}

.edit-category-modal {
  .edit-category-tab-general,
  .edit-category-tab-security {
    section {
      &.field > .btn {
        @extend %btn-raised;
      }
    }
  }

  .edit-category-tab-security section {
    &.field > .btn {
      margin-top: $modal-inner-spacer-y;
    }
  }

  .edit-category-tab-settings section {
    &.field {
      margin-bottom: $modal-inner-spacer-y;

      label {
        align-items: center;
        display: flex;

        input {
          margin: 0 0 0 $spacer-sm;

          &[type='checkbox'] {
            margin-right: $spacer-sm;
            margin-left: 0;
          }
        }

        .select2-container {
          margin-left: $spacer-sm;
        }
      }
    }
  }
}

.modal {
  &.history-modal .modal-header {
    height: auto;
  }

  form {
    margin-bottom: $modal-inner-spacer-y;
  }

  section {
    &.field {
      margin-bottom: $modal-inner-spacer-y;

      > br + * {
        margin-top: $spacer-sm;
      }

      .field-item {
        margin-right: $modal-inner-spacer-x;

        label,
        > :last-child {
          margin-bottom: 0;
        }
      }

      .input-append,
      .input-prepend {
        margin-top: $spacer-sm !important;
        margin-bottom: $spacer-sm;
      }
    }
  }

  .modal-body {
    p {
      font-size: inherit;
    }

    .alert {
      border-radius: 0;
      box-shadow: none;
      margin: 0 ($modal-padding-x * -1) $modal-inner-spacer-y;
      padding: $modal-inner-spacer-y $modal-padding-x;

      &:last-child {
        margin-bottom: 0;
      }
    }

    .uploaded-image-preview {
      width: 100%;
    }
  }

  .nav {
    background-color: transparent;
    border-bottom: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
    display: flex;
    margin-bottom: 0;
    padding: $modal-inner-spacer-y 0 0;

    > li {
      flex-grow: 1;
      margin-bottom: ($modal-border-width * -1);

      &.active > a {
        background-color: transparent;
        color: unquote('$quaternary');

        @include focus-hover {
          background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
          color: color-chooser($btn-color-dark, $btn-color-light);
        }

        &::before {
          opacity: 1;
        }
      }

      > a {
        border-radius: $btn-border-radius $btn-border-radius 0 0;

        &::before {
          background-color: unquote('$quaternary');
          border-radius: 0;
          height: 2px;
          top: auto;
        }

        &.active {
          background-color: transparent;
          color: unquote('$quaternary');

          @include focus-hover {
            background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
            color: color-chooser($btn-color-dark, $btn-color-light);
          }

          &::before {
            opacity: 1;
          }
        }
      }
    }
  }
}

.modal-backdrop {
  background-color: color-chooser($modal-backdrop-bg-dark, $modal-backdrop-bg-light);
  opacity: 1;
}

.modal-body {
  padding: $modal-inner-spacer-y $modal-padding-x $modal-padding-y;

  > form:last-child {
    margin-bottom: 0;
  }
}

.modal-close {
  margin: ($font-size-h4 * $line-height-h4 - $material-icon-size) 0 0 auto;
  order: 1;
}

.modal-footer {
  align-items: flex-start;
  border-top: 0;
  display: flex;
  flex-direction: row-reverse;
  padding: $modal-footer-padding-y $modal-footer-padding-x;

  .modal-header ~ &,
  .modal-header ~ div > &,
  .modal-header ~ form > & {
    border-top: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
  }

  :not(.disclaimer) a {
    @extend %btn-flat;
    @extend %btn-footer;

    &.btn-primary {
      body .bootbox.modal & {
        color: unquote('$tertiary');
      }
    }
  }

  .btn {
    @extend %btn-footer;

    margin: 0;

    &:first-child {
      margin-left: $card-inner-spacer-x;
    }
  }
}

.modal-header {
  border-bottom: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
  display: flex;
  padding: $modal-padding-y $modal-padding-x $modal-inner-spacer-y;

  &:last-child {
    padding-bottom: $modal-padding-y;
  }

  h3 {
    @extend %typography-h4;

    margin: 0 $modal-inner-spacer-x 0 0;
    padding: 0;
  }
}

.modal-middle-container {
  display: block;
  flex-grow: 1;
}

.modal-outer-container {
  align-items: center;
  display: flex;
  height: 100vh;
  justify-content: center;
  width: 100vw;
}

.modal-tab {
  right: $modal-padding-x;
  left: $modal-padding-x;
  width: auto;
}

.permission-list {
  border-top: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
  margin: 0 ($modal-padding-x * -1);

  &:empty {
    display: none;
  }

  &:first-child {
    border-top: 0;

    li:first-child {
      padding-top: 0;
    }
  }

  li {
    align-items: center;
    border-bottom: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
    display: flex;
    margin: 0;
    padding: $modal-inner-spacer-y $modal-padding-x;

    > :last-child {
      margin-left: auto;
    }
  }

  .fa-times-circle {
    margin-left: 0;
  }

  .name {
    margin-right: $modal-inner-spacer-x;
  }

  .permission {
    margin-right: $modal-inner-spacer-x;
    margin-left: $modal-inner-spacer-x;
  }
}

@keyframes fade {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

